      Closes: #858287; LP: #1673292

  [ Ben Wiederhake ]
  * wrap-and-sort:
    + Add a dry-run option.  Closes: #808574

  [ Hilko Bengen ]
  * debsnap:
    + Complain about existing destdir only when it is created.
      Closes: #884177

  [ Mònica Ramírez Arceda ]
  * nmudiff:
    + Add a template argument to provide a different email from the one in the
      script. (Closes: #555863)

  [ Pierre-Elliott Bécue ]
  * d/control:
    + Add myself to uploaders.
  * wrap-and-sort:
    + Tweak the way files are handled, and print the modified file list in
      also in non-dry-run-mode when verbosity is enabled.
    + Remove empty lines at the beginning of a file.
  * nmudiff:
    + Clean up some indentations
    + Add a no-pending option to not add the pending tag if needed.

  [ Mattia Rizzolo ]
  * mk-origtargz:
    + Deal with Hurd where `getconf ARG_MAX` returns "undefined".

 -- Pierre-Elliott Bécue <becue@crans.org>  Sat, 17 Mar 2018 20:13:47 +0100

devscripts (2.18.1) unstable; urgency=medium

  [ Yavor Doganov ]
  * ltnu:
    + Add pkg-gnustep shortcut.  Closes: #885917

  [ Steve Langasek ]
  * tests:
    + Fix test_debchange when run on Debian derivatives.  Closes: #886211

  [ Mattia Rizzolo ]
  * bts:
    + Fix syntax issue in the POD documentation, so it can be built with an
      older pod as well.
  * ltnu:
    + Avoid using L<> with emails in the POD documentation, so it can be built
      with an older pod as well.
  * reproducible-check:
    + Instruct to install python3-xdg if missing.  Closes: #888307
  * mk-origtargz:
    + Split list of files to delete if the list gets too long to fit ARG_MAX.
      Thanks to Ximin Luo <infinity0> for the initial patch.  Closes: #855464
  * debian/control:
    + Change maintainer email from alioth to devscripts@packages.debian.org.
    + Move the Git repository to salsa.debian.org.

  [ Osamu Aoki ]
  * uupdate:
    + bash completion fix by Julian Gilbey.  Closes: #834006
  * uscan: